--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
           
           <li>
             <i class="fa-li fa fa-envelope fa-2x" aria-hidden="true"></i>
-            <span><a href="mailto:robb@linnaean.co">robb@linnaean.co</a></span>
+            <span><a href="mailto:robbfitzsimmons@gmail.com">robbfitzsimmons@gmail.com</a></span>
           </li>
           
 
